--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "shoppingcart",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/XPedroEs21/FP-PlantShopping-AppReact.git",
   "type": "module",
   "scripts": {
     "dev": "vite",
