trying to make git pages work

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shoppingcart",
+  "name": "fp-plantshopping-appreact",
   "private": true,
   "version": "0.0.0",
   "homepage": "https://github.com/XPedroEs21/FP-PlantShopping-AppReact.git",
